@@ -50,6 +50,8 @@ they occurred between. For more detailed information see the
 
 @item Other changes:
 @itemize @minus
+@item To build with XFree86/X.Org < 7.0 add --without-xorg-x11r7 flag [Christopher Bratusek]
+
 @item Added ebuild [Harald van Dijk]
 
 @item rep.m4 has been dropped use librep.pc/rep-gtk.pc instead [Christopher Bratusek]
