@@ -1,3 +1,8 @@
+2009-02-03  Christopher Bratusek <zanghar@freenet.de>
+	* configure.in: re-add checks for XFree86 (add --without-xorg-x11r7 flag)
+
+	* README.IMPORTANT: updated
+
 2009-02-02  Christopher Bratusek <zanghar@freenet.de>
 	* Makefile.in: create $DESTDIR$datadir/applications before 
 	               installing desktop file into it
